--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "mathblitz 1.0.h": "c",
-        "funcionesmenu.h": "c"
+        "funcionesmenu.h": "c",
+        "stdbool.h": "c",
+        "greek_31_card_game.h": "c",
+        "stdlib.h": "c"
     }
 }
